fixed overflow styles

--- a/src/features/components/todo-item/todoItem.css
+++ b/src/features/components/todo-item/todoItem.css
@@ -29,6 +29,9 @@
     font-size: 0.88rem;
     font-weight: 600;
     color: #034EA2;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .todo-title.completed {
@@ -51,6 +54,8 @@
 .todo-desc {
     margin-left: 50px;
     font-size: 0.75rem;
+    overflow-wrap: break-word;
+    padding-right: 4.5rem;
 }
 
 .todo-created {
@@ -62,6 +67,7 @@
 .todo-footer {
     display: flex;
     justify-content: space-between;
+    margin-top: 0.5rem;
 }
 
 .todo-actions {
